# RustyFromia

./: .gitignore  Cargo.toml  README.md  build_deb.sh
examples/: hello.rr
sdk/objctive-r/: compiler.rs  grammar.pest  invoker.rs
sdk/vscode/: README.md  package-lock.json  package.json
sdk/vscode/src/: extension.js  extension.ts
sdk/vscode/src/language/: objective-r.tmLanguage.json
sdk/zed/: package.json
sdk/zed/src/: extension.js
sdk/zed/syntaxes/: objective-r.tmLanguage.json
src/: lib.rs  main.rs  unixSystemInterface.rs
src/sdk/objctive_r/: invoker.rs
src/sdk/objective_r/: invoker.rs  rsobject.rs
